# VisualizeDynamics

./: Ctrl_Aff_DDBS_hopf.ipynb  Dockerfile  Hopf Emote Network.ipynb  Hopf_Basics.ipynb  PredPrey.py  README.md  Trajectory_draw.py  Vect_DMDecomp.py  dyn_lib.py  hopf_element.py  interactive_flow_field.py  interactive_radial_field.py  main.py  pyproject.toml  test_scatter_update.py
.devcontainer/: Dockerfile  devcontainer.json
.ipynb_checkpoints/: Ctrl_Aff_DDBS_hopf-checkpoint.ipynb  Hopf_Basics-checkpoint.ipynb
.spyproject/: workspace.ini
app/: interactive_flow_field.py
docs/: CUSTOM_EQUATIONS.md
examples/: PredPrey.py  interactive_flow_field.py
notebooks/: GNN_Psych_DBS.ipynb  Hopf_Basics.ipynb  Lorenz Differential Equations.ipynb  interactive_SINDy_lorenz.ipynb  interactive_SINDy_neural.ipynb
notebooks/.ipynb_checkpoints/: GNN_Psych_DBS-checkpoint.ipynb  Hopf_Basics-checkpoint.ipynb  Lorenz Differential Equations-checkpoint.ipynb  interactive_SINDy_neural-checkpoint.ipynb
src/: state_dyn.py
src/app/: interactive_flow_field.py
src/vizdyn/: __init__.py  analysis.py  equation_parser.py  systems.py  visualization.py
src/vizdyn/frontend/: gui_components.py  plotting.py
src/vizdyn/optimal/: OptControl_trajectories.py
src/vizground/: test_scatter_update.py
tests/: README.md  __init__.py  conftest.py  test_analysis.py  test_app.py  test_systems.py  test_visualization.py
