[tool.poetry]
name = "vizdyn"
version = "0.1.0"
description = "Visualize Dynamical Systems in Various Ways"
authors = ["Vineet Tiruvadi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
numpy = "^1.25.2"
matplotlib = "^3.7.2"
scipy = "^1.11.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
